--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   </div>
   <script>
     (function() {
-      emailjs.init('wLE5I2YjXRubD8MjC'); // Your EmailJS public key
+      emailjs.init('wLE5l2YjXRubD8MjC'); // Your EmailJS public key
     })();
 
     function getStudentName() {
